# compss

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .wci.yml  ACKNOWLEDGMENTS  BUG_REPORT_TEMPLATE.md  CITATION.cff  CITATION.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  PULL_REQUEST_TEMPLATE.md  README  README.md  RELEASE_NOTES  changelog  patch_bind  pom.xml  submodules_get.sh  submodules_patch.sh  submodules_update.sh  ¬
builders/cross-compile/armhf/tmp/c/src/compssgen/: compss_generator  configure.ac
builders/scs/commons/tmp/dependencies/pluto/candl/: CMakeLists.txt  ChangeLog  Makefile.am  README  TODO  autogen.sh  candl-config.cmake  configure.ac  redo.sh
builders/scs/commons/tmp/dependencies/pluto/clan/: AUTHORS  BUGS  CMakeLists.txt  Makefile.am  README  autogen.sh  clan-config.cmake  configure.ac  redo.sh  update_tests.sh  vim_session.txt
builders/scs/commons/tmp/dependencies/pluto/cloog-isl/: ChangeLog  Makefile.am  README  autogen.sh  configure.ac  genversion.sh.in
compss/programming_model/bindings/bindings-common/: .gitignore  AUTHORS  Makefile.am  Makefile.in  clean.sh  configure  configure.ac  install_common
compss/programming_model/bindings/bindings-common/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
compss/programming_model/bindings/bindings-common/src/: .gitignore  AbstractCache.cc  AbstractCache.h  AbstractExecutor.h  BindingDataManager.cc  BindingDataManager.h  BindingExecutor.cc  BindingExecutor.h  GS_compss.cc  GS_compss.h  JavaNioConnStreamBuffer.cc  JavaNioConnStreamBuffer.h  Makefile.am  Makefile.in  common.cc  common.h  common_jni.cc  common_jni.h  compss_jni.cc  compss_jni.h  compss_pipes.cc  compss_pipes.h  compss_worker.cc  compss_worker.h  param_metadata.h
compss/programming_model/bindings/c/src/bindinglib/: .gitignore  CBindingCache.h  CBindingExecutor.cc  CBindingExecutor.h  GS_compss.cc  GS_templates.h  Makefile.am  autogen.sh  base64.c  c_compss.cc  c_compss.h  c_compss_base64.c  c_compss_base64.h  c_compss_commons.h  clean.sh  configure.ac  customStream.h  generated_executor.h  gs_base64.h
compss/programming_model/bindings/c/src/compssbuilder/: Makefile.am  autogen.sh  clean.sh  compss_build.in  configure.ac
compss/programming_model/bindings/c/src/compssgen/: .in  GSIDL.dtd  Makefile.am  autogen.sh  backend.h  backendlib.c  backendlib.h  c-backend.c  clean.sh  corba-gram.c  corba-gram.h  corba-gram.y  corba-lex.c  corba-lex.l  main.c  semantic.c  semantic.h  types.c  types.h
compss/programming_model/bindings/c/src/gsbuilder/: .gitignore  Makefile.am  Makefile.in  autogen.sh  clean.sh  configure.ac  gsbuild.in
compss/programming_model/bindings/c/src/gsstubgen/: .gitignore  Makefile.am  backend.h  backendlib.c  backendlib.h  c-backend.c  c-constraints-backend.c  clean.sh  configure.ac  corba-gram.c  corba-gram.h  corba-gram.y  corba-lex.c  corba-lex.l  main.c  semantic.c  semantic.h
compss/programming_model/bindings/python/: LICENSE.txt  README.md  README.txt  clean  commons  coverage.cfg  coverage_run.sh  coverage_run_integration.sh  coverage_upload.sh  install  install_testing_deps.sh  nose_tests.py  pom.xml  pyproject.toml  run_coverage.sh  run_coverage_integration.sh  run_unittests  run_unittests.sh  run_unittests_integration  run_unittests_integration.sh  setup.cfg  setup.py  setup2.py  setup3.py  sitecustomize.py  upload_coverage.sh
compss/programming_model/bindings/python/apps/fzj/: analysis_params.py  experiment_params.py  ns-data-proc_compss_files.py  ns-data-proc_compss_objects.py  ns-data-proc_parallel-python.py
compss/programming_model/bindings/python/apps/matmul/: matmul.py
compss/programming_model/bindings/python/apps/matmul_numpy/: matmul_numpy.py
compss/programming_model/bindings/python/apps/test/: test_mp.py  test_tasks.py
compss/programming_model/bindings/python/log/: logging.json  logging.json.debug  logging.json.debug.json  logging.json.off  logging_container_worker.json  logging_container_worker_debug.json  logging_container_worker_off.json  logging_debug.json  logging_gat_worker.json  logging_gat_worker_debug.json  logging_gat_worker_info.json  logging_gat_worker_off.json  logging_info.json  logging_mpi_worker.json  logging_mpi_worker_debug.json  logging_mpi_worker_info.json  logging_mpi_worker_off.json  logging_off.json  logging_worker.json  logging_worker_debug.json  logging_worker_off.json
compss/programming_model/bindings/python/scripts/: install_compilation_deps.sh  install_style_deps.sh  install_testing_deps.sh
compss/programming_model/bindings/python/scripts/analysis/: check_lint.sh  check_prospector.sh
compss/programming_model/bindings/python/scripts/compilation/: check.sh  compile.sh  compile_individually.sh  metrics.sh  mypy_check.sh  mypy_clean.sh  mypy_compile.sh  mypy_deps.sh  mypy_metrics.sh
compss/programming_model/bindings/python/scripts/security/: check_bandit.sh
compss/programming_model/bindings/python/scripts/style/: apply_black.sh  check_black.sh  check_code.sh  check_documentation.sh  check_flake8.sh
compss/programming_model/bindings/python/scripts/test/: run_unittests.sh  run_unittests_coverage.sh  run_unittests_fail.sh  unittests_commons.sh
compss/programming_model/bindings/python/src/: __init__.py  coverage.cfg  mypy_check.sh  mypy_clean.sh  mypy_compile.sh  mypy_compile_all.sh  mypy_deps.sh  mypy_metrics.sh  pytest.sh
compss/programming_model/bindings/python/src/exaqute/: ExaquteExamples.py  ExaquteExecutionConstraints.py  ExaquteParameter.py  ExaquteTask.py  ExaquteTaskLocal.py  ExaquteTaskPyCOMPSs.py  ExecutionCharacteristics.py  ExecutionConstraints.py  __init__.py
compss/programming_model/bindings/python/src/ext/: compssmodule.c  compssmodule.cc  dlb_affinity.c  ear.c  object_cache.cc  object_cache.h  persistent_cache.cc  persistent_cache.h  process_affinity.cc  process_affinity.h  shm_manager.cc  shm_manager.h  thread_affinity.cc  thread_affinity.h
compss/programming_model/bindings/python/src/pycompss/: __init__.py  __main__.py  interactive.py
(+9912 files in other folders)
