AM_YFLAGS = -d
ACLOCAL_AMFLAGS=-I m4 

bin_PROGRAMS = gsstubgen
sbin_PROGRAMS =
noinst_PROGRAMS =
check_PROGRAMS =

AM_CPPFLAGS = -I../../../c/include -I../../../bindings-common/include

include_HEADERS =
	
gsstubgen_SOURCES = \
	backendlib.c \
	c-backend.c \
	c-constraints-backend.c \
	corba-gram.y \
	corba-lex.l \
	main.c \
	semantic.c
